<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BCAAA4"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="za.co.example.admin.justjava.MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/editxt_name"
            android:ems="10"
            android:id="@+id/editxt_name"
            android:typeface="serif" />

        <TextView
            android:id="@+id/static_textview_toppings"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:background="#795548"
            android:padding="12sp"
            android:text="@string/static_toppings_txtvw"
            android:textAllCaps="true"
            android:textColor="#A1887F"/>

        <CheckBox
            android:id="@+id/whip_cream_chechBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:paddingStart="@dimen/padding_checkbox"
            android:paddingEnd="@dimen/padding_checkbox"
            android:text="@string/toppings_txtvw1"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/chocolate_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:paddingStart="@dimen/padding_checkbox"
            android:paddingEnd="@dimen/padding_checkbox"
            android:text="@string/toppings_txtvw2"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"/>



        <TextView
            android:id="@+id/txtvw1"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#795548"
            android:padding="24sp"
            android:text="@string/static_quantity_txtvw"
            android:textAllCaps="true"
            android:textColor="#A1887F"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:background="#A1887F"
            android:onClick="increment"
            android:shadowColor="#A1887F"
            android:text="@string/btn_add"
            />
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/quantity_txtvw"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btn_sub"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="#A1887F"
            android:onClick="decrement"
            android:text="@string/btn_sub"/>
        </RelativeLayout>


        <Button
            android:id="@+id/btn_order"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:padding="24sp"
            android:text="@string/order_txtvw"
            />

        <TextView

            android:id="@+id/txtvw2"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#795548"
            android:padding="24sp"
            android:text="@string/static_price_txtvw"
            android:textAllCaps="true"
            android:textColor="#A1887F"/>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:padding="32sp"
            android:text="@string/price_txtvw"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>
    </LinearLayout>
</ScrollView>
